2008-01-09  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/38495
	* ira-emit.c (print_move_list, ira_debug_move_list): New
	functions.
	(add_range_and_copies_from_move_list): Print all added ranges.
	Add ranges to memory optimized destination.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143214 138bc75d-0d04-0410-961f-82ee72b054a4